# immersion-controller

./: Pipfile  README.md  pyproject.toml  tox.ini
immersion_controller/: cli.py  control.py  switches.py  tariffs.py
immersion_controller/octopus/: account.py  schemas.py
immersion_controller/tests/: test_account.py  test_cli.py  test_control.py  test_switches.py  test_tariffs.py
