[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "immersion-control"
version = "0.0.1"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
tests = [
    "responses>=0.25.0",
    "pytest>8"
]

[project.scripts]
immersion-controller = "immersion_controller.cli:main"

[project.urls]
repository = "https://github.com/tomwphillips/immersion-controller"

[tool.isort]
profile = "black"